# tgwr

./: .env.example  .env.grafana  .gitignore  CLAUDE-CORE.md  CLAUDE.md  Cargo.toml  README.md  SDLC-RULES-SUMMARY.md  index.html  infographic.html
.claude/agents/: AGENT-CREATION-GUIDE.md  agent-builder.md  agent-research-prompt.md  ai-test-engineer.md  api-architect.md  backend-architect.md  critical-goal-reviewer.md  database-architect.md  deep-research-agent.md  devops-specialist.md  documentation-architect.md  frontend-architect.md  integration-orchestrator.md  language-rust-expert.md  performance-engineer.md  pipeline-orchestrator.md  repo-knowledge-distiller.md  sdlc-enforcer.md  sdlc-setup-specialist.md  solution-architect.md  technical-writer.md  v3-setup-orchestrator.md
.github/workflows/: ai-sdlc-validation.yml  rlc-observability.yml
.rlc/: README.md
.rlc/agents/: alert-router.yaml  auto-remediator.yaml  communication.yaml  health-checker.yaml  incident-commander.yaml  metrics-collector.yaml
.rlc/config/: agent-models.yaml  gates.yaml  mcp-servers.yaml
.rlc/scripts/: setup-models.sh  test-ingestion.sh  verify-config.sh
crates/peilbeheer-api/: Cargo.toml
crates/peilbeheer-api/src/: alert_service.rs  arcgis_client.rs  auth_service.rs  config.rs  dashboard_service.rs  db.rs  energyzero_client.rs  error.rs  fews_client.rs  hydronet_client.rs  main.rs  optimization_service.rs  scenario_service.rs  timeseries_service.rs  websocket_service.rs
crates/peilbeheer-api/src/routes/: alerts.rs  assets.rs  auth.rs  dashboard.rs  dhydro.rs  fews.rs  gemalen.rs  health.rs  mod.rs  optimalisatie.rs  peilgebieden.rs  scenarios.rs  simulatie.rs  status.rs  timeseries.rs  websocket.rs
crates/peilbeheer-core/: Cargo.toml
crates/peilbeheer-core/src/: alert.rs  asset.rs  auth.rs  dashboard.rs  dhydro.rs  energie.rs  fews.rs  gemaal.rs  hydronet.rs  lib.rs  peilgebied.rs  scenario.rs  sliding_window.rs  timeseries.rs  waterbalans.rs  websocket.rs
crates/peilbeheer-core/tests/: integration_e2e.rs
crates/peilbeheer-documenten/: Cargo.toml  README.md
crates/peilbeheer-documenten/examples/: README.md  batch_parse.rs  create_test_pdf.rs  test_kreuzberg.rs  test_metadata.rs  test_pdf.rs
crates/peilbeheer-documenten/src/: lib.rs  ocr.rs  parser.rs  types.rs
crates/peilbeheer-frontend/: Cargo.toml  Dioxus.toml
crates/peilbeheer-frontend/assets/: main.css
crates/peilbeheer-frontend/src/: api.rs  main.rs
crates/peilbeheer-frontend/src/components/: map.rs  mod.rs  navbar.rs  status_badge.rs
crates/peilbeheer-frontend/src/pages/: dashboard.rs  gemaal_detail.rs  gemalen.rs  mod.rs  simulatie.rs
crates/peilbeheer-simulatie/: Cargo.toml  NETWERK.md  TODO.md
crates/peilbeheer-simulatie/examples/: export_voorbeeld.rs  netwerk_voorbeeld.rs  scenario_voorbeeld.rs  visualisatie_voorbeeld.rs
crates/peilbeheer-simulatie/src/: drooglegging.rs  export.rs  lib.rs  netwerk.rs  optimalisatie.rs  pid.rs  scenario.rs  visualisatie.rs  waterbalans.rs
docs/: architecture-decision-record.md  failure-mode-analysis.md  integration-design.md  requirements-traceability-matrix.md  system-invariants.md  what-if-analysis.md
docs/feature-proposals/: 000-template.md  001-initial-water-management-system.md  002-schema-comment-stripping-fix.md  003-dhydro-integration.md
migrations/: 001_initial_schema.sql  002_asset_registratie.sql  003_peilgebieden.sql  004_scenarios.sql  005_scenario_results.sql  006_users.sql  007_alerts.sql  008_timeseries.sql
observability/: Cargo.toml.snippet  grafana-agent.yml
observability/src/: instrumentation.rs
retrospectives/: 000-template.md  001-initial-project-setup.md  002-schema-init-comment-stripping.md  003-compilation-errors-fix.md
rlc-setup/: SETUP-README.md  event-handling-setup.yaml  install-agents.sh
