[workspace]
resolver = "2"
members = [
    "crates/peilbeheer-core",
    "crates/peilbeheer-api",
    "crates/peilbeheer-simulatie",
    "crates/peilbeheer-frontend",
    "crates/peilbeheer-documenten",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Peilbeheer HHVR Team"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Types
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database - DuckDB (embedded analytical database)
duckdb = { version = "1.1", features = ["bundled"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

# URL encoding
urlencoding = "2.1"

# Internal crates
peilbeheer-core = { path = "crates/peilbeheer-core" }
peilbeheer-simulatie = { path = "crates/peilbeheer-simulatie" }
peilbeheer-documenten = { path = "crates/peilbeheer-documenten" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
