[package]
name = "peilbeheer-api"
version.workspace = true
edition = "2024"
description = "REST API server voor Peilbeheer HHVR met Axum en DuckDB"

[dependencies]
peilbeheer-core.workspace = true
peilbeheer-simulatie.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Database
duckdb.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Config
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9"
sha2 = "0.10"

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true
uuid.workspace = true

# URL encoding
urlencoding.workspace = true
serde_urlencoded = "0.7"
