[package]
name = "peilbeheer-frontend"
version.workspace = true
edition = "2024"
description = "Dioxus frontend voor Peilbeheer HHVR"

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
dioxus-charts = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "HtmlElement", "Element"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
