[package]
name = "peilbeheer-simulatie"
version.workspace = true
edition = "2024"
description = "Simulatie engine voor waterbalans, PID-regeling en drooglegging"

[dependencies]
peilbeheer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
plotters = "0.3"
itertools = "0.13"
